<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdatePasswordActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/app_background"
        android:layout_gravity="top|center"
        android:scaleType="centerCrop"
        android:contentDescription="@string/image_description"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="50dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnBack"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:backgroundTint="@color/white"
            android:background="@drawable/ripple_shape_button_icon_rounded"
            app:icon="@drawable/baseline_arrow_left_24"
            app:iconTint="@color/coffee"
            app:iconGravity="textTop"
            android:layout_marginStart="16dp"/>

        <TextView
            android:id="@+id/lblUSer"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/suezone_regular"
            android:text="@string/user"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:gravity="center"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:backgroundTint="@color/white"
            android:background="@drawable/ripple_shape_button_icon_rounded"
            app:icon="@drawable/baseline_arrow_left_24"
            app:iconTint="@color/coffee"
            app:iconGravity="textTop"
            android:visibility="invisible"
            android:layout_marginEnd="16dp"/>

    </LinearLayout>

    <ImageView
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:src="@drawable/baseline_person_24"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="145dp"
        android:background="@drawable/shape_rounded"
        android:backgroundTint="#1AD9D9D9"
        android:padding="30dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/suezone_regular"
                android:text="@string/new_password"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:layout_marginBottom="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/txtNewPassword"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:inputType="textPassword"
                    android:background="@drawable/shape_rounded"
                    android:paddingHorizontal="16dp"
                    android:fontFamily="@font/suezone_regular"
                    android:textColor="@color/coffee"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnPasswordVisibility1"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    app:backgroundTint="@color/white"
                    android:background="@drawable/ripple_shape_button_icon_rounded"
                    app:icon="@drawable/baseline_visibility_off_24"
                    app:iconTint="@color/coffee"
                    app:iconGravity="textTop"
                    android:layout_marginStart="10dp"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/suezone_regular"
                android:text="@string/confirm_password"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:layout_marginBottom="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/txtConfirmPassword"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:inputType="textPassword"
                    android:background="@drawable/shape_rounded"
                    android:paddingHorizontal="16dp"
                    android:fontFamily="@font/suezone_regular"
                    android:textColor="@color/coffee"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnPasswordVisibility2"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    app:backgroundTint="@color/white"
                    android:background="@drawable/ripple_shape_button_icon_rounded"
                    app:icon="@drawable/baseline_visibility_off_24"
                    app:iconTint="@color/coffee"
                    app:iconGravity="textTop"
                    android:layout_marginStart="10dp"/>

            </LinearLayout>

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnUpdatePassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/update_password"
            android:background="@drawable/ripple_shape_button_rounded"
            app:backgroundTint="@color/coffee"
            android:fontFamily="@font/suezone_regular"
            android:textColor="@color/white"
            android:textSize="16sp"/>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCloseSession"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/close_session"
        android:background="@drawable/ripple_shape_button_rounded"
        app:backgroundTint="@color/coffee"
        android:fontFamily="@font/suezone_regular"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_gravity="bottom"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"/>

</FrameLayout>
